--- a/app/src/main/res/layout/rv_position_management_item.xml
+++ b/app/src/main/res/layout/rv_position_management_item.xml
@@ -5,6 +5,7 @@
     android:orientation="vertical">
 
     <TextView
+        android:id="@+id/update_time"
         android:layout_marginTop="7dp"
         android:layout_marginBottom="8dp"
         android:layout_width="match_parent"
@@ -24,11 +25,13 @@
             android:orientation="horizontal">
 
             <RelativeLayout
+                android:id="@+id/layoutChoose"
                 android:layout_width="35dp"
                 android:layout_height="60dp"
                 android:orientation="horizontal">
 
                 <ImageView
+                    android:id="@+id/ivChoose"
                     android:layout_width="15dp"
                     android:layout_height="15dp"
                     android:layout_centerInParent="true"
@@ -53,6 +56,7 @@
                     android:paddingTop="11dp">
 
                     <TextView
+                        android:id="@+id/title"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="9dp"
@@ -74,6 +78,7 @@
                             android:src="@mipmap/zx_106" />
 
                         <TextView
+                            android:id="@+id/hits"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="5dp"
@@ -91,8 +96,12 @@
                     android:layout_weight="1" />
 
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:id="@+id/ordid"
+                    android:background="@drawable/bg_13"
+                    android:paddingRight="2dp"
+                    android:gravity="right|center_vertical"
+                    android:layout_width="25dp"
+                    android:layout_height="18dp"
                     android:layout_gravity="center"
                     android:text="2"
                     android:textColor="@color/black"
@@ -100,6 +109,7 @@
 
 
                 <TextView
+                    android:id="@+id/status"
                     android:layout_width="61dp"
                     android:layout_height="22dp"
                     android:layout_gravity="center"
@@ -125,13 +135,14 @@
             android:orientation="horizontal">
 
             <ImageView
+                android:id="@+id/menu01"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:layout_marginLeft="17dp"
                 android:src="@mipmap/zx_99" />
 
             <ImageView
-
+                android:id="@+id/menu02"
                 android:layout_width="24.8dp"
                 android:layout_height="24.8dp"
                 android:layout_marginLeft="18dp"
