--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -103,14 +103,24 @@
             android:layout_marginRight="10dp"
             android:background="@color/bg_color" />
 
-        <TextView
-            android:id="@+id/tvInfo"
+        <ScrollView
+            android:overScrollMode="never"
             android:layout_width="333.8dp"
             android:layout_height="261dp"
             android:layout_gravity="center"
             android:layout_marginTop="10dp"
-            android:textColor="#FF999999"
-            android:textSize="14sp" />
+            android:fadingEdge="none"
+            android:paddingBottom="10dp"
+            android:scrollbars="none">
+
+            <TextView
+                android:id="@+id/tvInfo"
+                android:layout_width="333.8dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="top"
+                android:textColor="#FF999999"
+                android:textSize="14sp" />
+        </ScrollView>
 
     </LinearLayout>
 
@@ -138,7 +148,5 @@
             android:layout_gravity="center"
             android:layout_marginRight="10dp"
             android:src="@mipmap/zx_44" />
-
     </LinearLayout>
-
 </LinearLayout>
