--- a/app/src/main/res/layout/rv_invitation_interview_record_item.xml
+++ b/app/src/main/res/layout/rv_invitation_interview_record_item.xml
@@ -5,6 +5,7 @@
     android:orientation="vertical">
 
     <TextView
+        android:id="@+id/time1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="8dp"
@@ -63,6 +64,7 @@
                 android:paddingLeft="13dp">
 
                 <TextView
+                    android:id="@+id/time2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="right"
