--- a/app/src/main/res/layout/top_bar_style_save.xml
+++ b/app/src/main/res/layout/top_bar_style_save.xml
@@ -37,7 +37,6 @@
         android:layout_height="wrap_content"
         android:text="保存"
         android:textColor="#FFFFFFFF"
-        android:textSize="14sp"
-        />
+        android:textSize="14sp" />
 
 </RelativeLayout>
