--- a/app/src/main/res/layout/activity_online_complaints.xml
+++ b/app/src/main/res/layout/activity_online_complaints.xml
@@ -44,6 +44,7 @@
                 android:orientation="horizontal">
 
                 <ImageView
+                    android:id="@+id/iv01"
                     android:layout_width="19dp"
                     android:layout_height="19dp"
                     android:layout_marginLeft="5dp"
@@ -54,15 +55,16 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="12dp"
-                    android:text="咨询"
+                    android:text="回复"
                     android:textColor="#FF333333"
                     android:textSize="13sp" />
 
                 <ImageView
+                    android:id="@+id/iv02"
                     android:layout_width="19dp"
                     android:layout_height="19dp"
                     android:layout_marginRight="4dp"
-                    android:src="@mipmap/zx_3" />
+                    android:src="@mipmap/zx_117" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -73,30 +75,32 @@
                     android:textSize="13sp" />
 
                 <ImageView
+                    android:id="@+id/iv03"
                     android:layout_width="19dp"
                     android:layout_height="19dp"
                     android:layout_marginRight="4dp"
-                    android:src="@mipmap/zx_3" />
+                    android:src="@mipmap/zx_117" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="12dp"
-                    android:text="咨询"
+                    android:text="建议"
                     android:textColor="#FF333333"
                     android:textSize="13sp" />
 
                 <ImageView
+                    android:id="@+id/iv04"
                     android:layout_width="19dp"
                     android:layout_height="19dp"
                     android:layout_marginRight="4dp"
-                    android:src="@mipmap/zx_3" />
+                    android:src="@mipmap/zx_117" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="12dp"
-                    android:text="咨询"
+                    android:text="投诉"
                     android:textColor="#FF333333"
                     android:textSize="13sp" />
             </LinearLayout>
@@ -109,17 +113,18 @@
                 android:orientation="horizontal">
 
                 <ImageView
+                    android:id="@+id/iv05"
                     android:layout_width="19dp"
                     android:layout_height="19dp"
                     android:layout_marginLeft="5dp"
                     android:layout_marginRight="4dp"
-                    android:src="@mipmap/zx_3" />
+                    android:src="@mipmap/zx_117" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="12dp"
-                    android:text="咨询"
+                    android:text="其他"
                     android:textColor="#FF333333"
                     android:textSize="13sp" />
 
@@ -130,20 +135,24 @@
 
 
     <EditText
+        android:id="@+id/et01"
         android:layout_width="329dp"
         android:layout_height="329dp"
         android:layout_gravity="center"
-        android:layout_marginTop="26dp"
-        android:background="@color/color_white"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/et_edit_text"
         android:gravity="top"
-        android:padding="5dp" />
+        android:padding="5dp"
+        android:textColor="#FF151515"
+        android:textSize="14sp" />
 
     <Button
+        android:id="@+id/bt"
         android:layout_width="329dp"
         android:layout_height="40dp"
         android:layout_gravity="center"
         android:layout_marginTop="10dp"
-        android:background="@drawable/bt_bg_red_unclickable"
+        android:background="@drawable/bt_bg_red_clickable"
         android:text="发送"
         android:textColor="@color/color_white" />
 
