--- a/app/src/main/res/layout/activity_resume_details.xml
+++ b/app/src/main/res/layout/activity_resume_details.xml
@@ -219,17 +219,52 @@
                     android:textSize="10sp" />
             </LinearLayout>
 
-            <TextView
-                android:id="@+id/educationhistory"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/white"
-                android:paddingBottom="10dp"
+                android:orientation="vertical"
                 android:paddingLeft="11dp"
-                android:paddingRight="10dp"
-                android:paddingTop="10dp"
-                android:textColor="#FF333333"
-                android:textSize="12sp" />
+                android:paddingRight="11dp">
+
+                <TextView
+                    android:id="@+id/education01"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:text="杭州师范大学"
+                    android:textColor="#FF333333"
+                    android:textSize="12sp" />
+
+                <TextView
+                    android:id="@+id/education02"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="5dp"
+                    android:layout_marginTop="5dp"
+                    android:text="本科"
+                    android:textColor="#FF666666"
+                    android:textSize="12sp" />
+
+                <TextView
+                    android:id="@+id/education03"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="5dp"
+                    android:text="2011.09-2015.06"
+                    android:textColor="#FF666666"
+                    android:textSize="12sp" />
+
+                <TextView
+                    android:id="@+id/educationhistory"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="12dp"
+                    android:text="zzzz"
+                    android:textColor="#FF666666"
+                    android:textSize="12sp" />
+            </LinearLayout>
+
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -291,8 +326,8 @@
 
                 <TextView
                     android:id="@+id/specialty04"
-                    android:layout_width="73dp"
-                    android:layout_height="14dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_marginBottom="12dp"
                     android:text="其他能力：无"
                     android:textColor="#FF666666"
@@ -323,13 +358,15 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/layoutContact01"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="20dp"
+                android:layout_marginBottom="10dp"
                 android:background="@color/white"
                 android:orientation="vertical"
                 android:paddingLeft="11dp"
-                android:paddingRight="11dp">
+                android:paddingRight="11dp"
+                android:visibility="gone">
 
                 <TextView
                     android:id="@+id/contact01"
@@ -358,6 +395,77 @@
                     android:text="杭州市余杭区赛银国际广场8号楼802"
                     android:textColor="#FF666666"
                     android:textSize="12sp" />
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:id="@+id/layoutContact02"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:background="@color/white"
+                android:orientation="vertical"
+                android:paddingLeft="11dp"
+                android:paddingRight="11dp">
+
+                <Button
+                    android:id="@+id/btGet"
+                    android:layout_width="wrap_content"
+                    android:layout_height="40dp"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@drawable/bt_bg_red_clickable"
+                    android:gravity="center"
+                    android:text="联系方式"
+                    android:textColor="@color/color_white"
+                    android:textSize="14sp" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/layoutBottomMenu"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/btBottomMenu01"
+                    android:layout_width="0dp"
+                    android:layout_height="40dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/bt_bg_red_clickable"
+                    android:gravity="center"
+                    android:text="邀请面试"
+                    android:textColor="@color/color_white"
+                    android:textSize="14sp" />
+
+                <Button
+                    android:id="@+id/btBottomMenu02"
+                    android:layout_width="0dp"
+                    android:layout_height="40dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/bt_bg_red_clickable"
+                    android:gravity="center"
+                    android:text="立即沟通"
+                    android:textColor="@color/color_white"
+                    android:textSize="14sp" />
+
+                <Button
+                    android:id="@+id/btBottomMenu03"
+                    android:layout_width="0dp"
+                    android:layout_height="40dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/bt_bg_red_clickable"
+                    android:gravity="center"
+                    android:text="加入收藏"
+                    android:textColor="@color/color_white"
+                    android:textSize="14sp" />
+
             </LinearLayout>
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
