--- a/app/src/main/res/layout/activity_resume_management.xml
+++ b/app/src/main/res/layout/activity_resume_management.xml
@@ -6,7 +6,7 @@
     android:background="@color/bg_color"
     android:orientation="vertical">
 
-    <include layout="@layout/top_bar_style" />
+    <include layout="@layout/top_bar_style_save" />
 
     <LinearLayout
         android:layout_width="match_parent"
