--- a/app/src/main/res/layout/top_bar_style_resume_search.xml
+++ b/app/src/main/res/layout/top_bar_style_resume_search.xml
@@ -21,6 +21,8 @@
 
 
     <LinearLayout
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         android:layout_width="0dp"
         android:layout_height="25.4dp"
         android:layout_gravity="center_vertical"
@@ -45,6 +47,7 @@
             android:background="@null"
             android:hint="请输入关键字..."
             android:imeOptions="actionSearch"
+            android:singleLine="true"
             android:textColor="#999999"
             android:textSize="12sp" />
 
