--- a/app/src/main/res/layout/activity_resume_details.xml
+++ b/app/src/main/res/layout/activity_resume_details.xml
@@ -435,6 +435,7 @@
                     android:id="@+id/btBottomMenu01"
                     android:layout_width="0dp"
                     android:layout_height="40dp"
+                    android:layout_marginRight="5dp"
                     android:layout_weight="1"
                     android:background="@drawable/bt_bg_red_clickable"
                     android:gravity="center"
@@ -443,7 +444,6 @@
                     android:textSize="14sp" />
 
                 <Button
-
                     android:id="@+id/btBottomMenu02"
                     android:layout_width="0dp"
                     android:layout_height="40dp"
@@ -454,12 +454,14 @@
                     android:gravity="center"
                     android:text="发送留言"
                     android:textColor="@color/color_white"
-                    android:textSize="14sp" />
+                    android:textSize="14sp"
+                  />
 
                 <Button
                     android:id="@+id/btBottomMenu03"
                     android:layout_width="0dp"
                     android:layout_height="40dp"
+                    android:layout_marginLeft="5dp"
                     android:layout_weight="1"
                     android:background="@drawable/bt_bg_red_clickable"
                     android:gravity="center"
