--- a/app/src/main/res/layout/rv_home_preview_item.xml
+++ b/app/src/main/res/layout/rv_home_preview_item.xml
@@ -66,6 +66,7 @@
                 android:src="@mipmap/zx_45" />
 
             <TextView
+                android:id="@+id/area"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="7.2dp"
