--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -26,4 +26,6 @@
     <color name="get_code_text_01">#D0021B</color>
     <color name="get_code_text_02">#FF999999</color>
 
+    <color name="text_color_01">#FF333333</color>
+
 </resources>
