--- a/app/src/main/res/layout/rv_mailbox_get_item.xml
+++ b/app/src/main/res/layout/rv_mailbox_get_item.xml
@@ -95,6 +95,7 @@
                     android:layout_weight="1" />
 
                 <TextView
+                    android:singleLine="true"
                     android:id="@+id/info"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
