--- a/app/src/main/res/layout/rv_position_management_item.xml
+++ b/app/src/main/res/layout/rv_position_management_item.xml
@@ -6,11 +6,11 @@
 
     <TextView
         android:id="@+id/update_time"
-        android:layout_marginTop="7dp"
-        android:layout_marginBottom="8dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginBottom="8dp"
         android:layout_marginLeft="20dp"
+        android:layout_marginTop="7dp"
         android:text="2017-08-24"
         android:textColor="#FF666666"
         android:textSize="13sp" />
@@ -48,9 +48,9 @@
                 android:paddingLeft="17dp">
 
                 <LinearLayout
-                    android:gravity="center_vertical"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
+                    android:gravity="center_vertical"
                     android:orientation="vertical"
                     android:paddingBottom="9dp"
                     android:paddingTop="11dp">
@@ -87,6 +87,12 @@
                             android:textColor="#FF999999"
                             android:textSize="12sp" />
 
+                        <ImageView
+                            android:id="@+id/ivChatStatus"
+                            android:layout_width="13dp"
+                            android:layout_height="13dp"
+                            android:layout_gravity="center"
+                            android:src="@mipmap/zzzzzzzz" />
                     </LinearLayout>
                 </LinearLayout>
 
@@ -94,23 +100,31 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1" />
-                <ImageView
-                    android:id="@+id/ivChatStatus"
-                   android:layout_marginRight="10dp"
-                    android:src="@mipmap/zx_118"
+
+                <TextView
+                    android:id="@+id/refresh"
+                    android:layout_width="wrap_content"
+                    android:layout_height="22dp"
                     android:layout_gravity="center"
-                    android:layout_width="22dp"
-                    android:layout_height="22dp" />
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="11dp"
+                    android:background="@drawable/bg_10"
+                    android:gravity="center"
+                    android:paddingLeft="7dp"
+                    android:paddingRight="7dp"
+                    android:text="刷新"
+                    android:textColor="#FFFFFFFF"
+                    android:textSize="14sp" />
 
 
                 <TextView
                     android:id="@+id/ordid"
-                    android:background="@drawable/bg_13"
-                    android:paddingRight="2dp"
-                    android:gravity="right|center_vertical"
                     android:layout_width="25dp"
                     android:layout_height="18dp"
                     android:layout_gravity="center"
+                    android:background="@drawable/bg_13"
+                    android:gravity="right|center_vertical"
+                    android:paddingRight="2dp"
                     android:text="2"
                     android:textColor="@color/black"
                     android:textSize="12sp" />
