--- a/app/src/main/res/layout/rv_ylzp_item.xml
+++ b/app/src/main/res/layout/rv_ylzp_item.xml
@@ -1,19 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/layoutMain"
     android:layout_width="match_parent"
     android:layout_height="100dp"
     android:layout_marginBottom="10dp"
     android:background="@color/color_white">
 
-    <ImageView
+    <com.joooonho.SelectableRoundedImageView
+        android:id="@+id/img"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
         android:layout_marginLeft="21dp"
-        android:src="@mipmap/ic_launcher" />
+        app:sriv_left_bottom_corner_radius="30dp"
+        app:sriv_left_top_corner_radius="30dp"
+        app:sriv_right_bottom_corner_radius="30dp"
+        app:sriv_right_top_corner_radius="30dp" />
 
     <TextView
+        android:id="@+id/requestsalary"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
@@ -38,6 +45,7 @@
             android:src="@mipmap/zx_28" />
 
         <TextView
+            android:id="@+id/education"
             android:layout_width="wrap_content"
             android:layout_height="16dp"
             android:layout_marginLeft="5dp"
@@ -53,6 +61,7 @@
             android:src="@mipmap/zx_29" />
 
         <TextView
+            android:id="@+id/speciality"
             android:layout_width="wrap_content"
             android:layout_height="16dp"
             android:layout_marginLeft="5dp"
@@ -72,11 +81,12 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="应聘职位:"
+            android:text="期望职位:"
             android:textColor="#FF666666"
             android:textSize="13sp" />
 
         <TextView
+            android:id="@+id/jobName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
@@ -95,6 +105,7 @@
         android:orientation="horizontal">
 
         <TextView
+            android:id="@+id/name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="凌小慧"
@@ -102,6 +113,7 @@
             android:textSize="14sp" />
 
         <RelativeLayout
+            android:id="@+id/sex"
             android:layout_width="21.6dp"
             android:layout_height="12dp"
             android:layout_gravity="center"
@@ -109,6 +121,7 @@
             android:background="@mipmap/zx_27">
 
             <TextView
+                android:id="@+id/age"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_alignParentRight="true"
@@ -122,6 +135,7 @@
     </LinearLayout>
 
     <ImageView
+        android:id="@+id/ivChart"
         android:layout_width="23dp"
         android:layout_height="22dp"
         android:layout_alignParentBottom="true"
