众信企业端优化

--- a/app/src/main/res/layout/activity_posting_position.xml
+++ b/app/src/main/res/layout/activity_posting_position.xml
@@ -769,7 +769,7 @@
                     android:layout_height="match_parent"
                     android:layout_gravity="center"
                     android:background="@null"
-                    android:hint="请填写"
+                    android:hint="若干"
                     android:inputType="number"
                     android:maxLength="5"
                     android:singleLine="true"
