--- a/app/src/main/res/layout/rv_position_management_item.xml
+++ b/app/src/main/res/layout/rv_position_management_item.xml
@@ -102,6 +102,7 @@
                     android:layout_weight="1" />
 
                 <TextView
+                    android:visibility="gone"
                     android:id="@+id/refresh"
                     android:layout_width="wrap_content"
                     android:layout_height="22dp"
