--- a/app/src/main/res/layout/activity_personal_information.xml
+++ b/app/src/main/res/layout/activity_personal_information.xml
@@ -155,16 +155,25 @@
             android:layout_marginLeft="22dp"
             android:src="@mipmap/zx_79" />
 
-        <TextView
+        <EditText
             android:id="@+id/tvGetAddress"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="12dp"
             android:layout_marginLeft="10.2dp"
             android:layout_marginTop="12dp"
-            android:text="点击获取公司地址"
-            android:textColor="#FFD0021B"
+            android:layout_weight="1"
+            android:background="@null"
+            android:hint="输入公司地址"
+            android:textColor="@color/black"
             android:textSize="13sp" />
+
+        <ImageView
+            android:id="@+id/ivGetAddress"
+            android:layout_width="16.7dp"
+            android:layout_height="16.7dp"
+            android:layout_marginRight="13.8dp"
+            android:src="@mipmap/zx_36" />
     </LinearLayout>
 
     <LinearLayout
@@ -300,7 +309,6 @@
             android:src="@mipmap/zx_74" />
 
         <TextView
-            android:singleLine="true"
             android:id="@+id/tv07"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -309,6 +317,7 @@
             android:layout_marginRight="10dp"
             android:layout_marginTop="12dp"
             android:layout_weight="1"
+            android:singleLine="true"
             android:text="公司简介"
             android:textSize="13sp" />
 
