--- a/app/src/main/res/layout/activity_position_management.xml
+++ b/app/src/main/res/layout/activity_position_management.xml
@@ -24,7 +24,8 @@
 
         <Button
             android:id="@+id/bt01"
-            android:layout_width="104.3dp"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="40dp"
             android:layout_gravity="center"
             android:background="@drawable/bg_08"
@@ -32,14 +33,24 @@
             android:text="删除选中"
             android:textColor="#D0021B"
             android:textSize="14sp" />
-
         <Button
-            android:id="@+id/bt02"
+            android:id="@+id/bt03"
             android:layout_width="0dp"
             android:layout_height="40dp"
             android:layout_gravity="center"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
+            android:layout_weight="1"
+            android:background="@drawable/bt_bg_red_clickable"
+            android:gravity="center"
+            android:text="一键刷新"
+            android:textColor="#FFFFFF"
+            android:textSize="14sp" />
+        <Button
+            android:id="@+id/bt02"
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center"
             android:layout_weight="1"
             android:background="@drawable/bt_bg_red_clickable"
             android:gravity="center"
