--- a/app/src/main/res/layout/activity_posting_position.xml
+++ b/app/src/main/res/layout/activity_posting_position.xml
@@ -147,7 +147,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginLeft="20dp"
-                    android:text="标签选择"
+                    android:text="公司福利"
                     android:textColor="#333333"
                     android:textSize="14sp" />
 
@@ -551,7 +551,7 @@
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="请选择"
+                    android:text="不限"
                     android:textColor="#151515"
                     android:textSize="12sp" />
 
