--- a/app/src/main/res/layout/activity_settings_essential_information.xml
+++ b/app/src/main/res/layout/activity_settings_essential_information.xml
@@ -60,14 +60,42 @@
             </LinearLayout>
 
 
-            <TextView
+            <LinearLayout
                 android:layout_width="331dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
+                android:layout_gravity="center_horizontal"
                 android:layout_marginTop="20dp"
-                android:text="招聘负责人"
-                android:textColor="#FF666666"
-                android:textSize="14sp" />
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="招聘负责人"
+                    android:textColor="#FF666666"
+                    android:textSize="14sp" />
+
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="1dp"
+                    android:layout_weight="1" />
+
+                <TextView
+                    android:id="@+id/tv666"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="联系人管理"
+                    android:textColor="#D0021B"
+                    android:textSize="14sp" />
+
+                <ImageView
+                    android:layout_width="7dp"
+                    android:layout_height="16.3dp"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="5dp"
+                    android:src="@mipmap/zx_44" />
+            </LinearLayout>
 
 
             <EditText
@@ -87,7 +115,7 @@
             <TextView
                 android:layout_width="331dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
+                android:layout_gravity="center_horizontal"
                 android:layout_marginTop="15dp"
                 android:text="法人代表（选填）"
                 android:textColor="#FF666666"
@@ -178,9 +206,9 @@
                 <EditText
                     android:id="@+id/et05"
                     android:layout_width="0dp"
-                    android:layout_weight="1"
                     android:layout_height="38dp"
                     android:layout_gravity="center"
+                    android:layout_weight="1"
                     android:background="@null"
                     android:gravity="left|center_vertical"
                     android:hint="请填写公司地址"
@@ -197,8 +225,6 @@
                     android:src="@mipmap/zx_36" />
 
             </LinearLayout>
-
-
 
 
             <TextView
@@ -317,7 +343,7 @@
                 android:layout_marginBottom="47dp"
                 android:layout_marginTop="47dp"
                 android:background="@drawable/bt_bg_red_clickable"
-                android:text="修改"
+                android:text="提交修改内容"
                 android:textColor="#FFFFFFFF"
                 android:textSize="16sp" />
         </LinearLayout>
