--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <LinearLayout
@@ -52,28 +52,48 @@
                 android:layout_height="71dp"
                 android:layout_marginLeft="21dp"
                 android:scaleType="centerCrop"
-                app:sriv_left_top_corner_radius="35.5dp"
-                app:sriv_right_top_corner_radius="35.5dp"
-                app:sriv_left_bottom_corner_radius="35.5dp"
-                app:sriv_right_bottom_corner_radius="35.5dp"
-                app:sriv_border_width="4dp"
                 app:sriv_border_color="#EE6723"
-                app:sriv_oval="true" />
+                app:sriv_border_width="4dp"
+                app:sriv_left_bottom_corner_radius="35.5dp"
+                app:sriv_left_top_corner_radius="35.5dp"
+                app:sriv_oval="true"
+                app:sriv_right_bottom_corner_radius="35.5dp"
+                app:sriv_right_top_corner_radius="35.5dp" />
 
             <LinearLayout
-                android:layout_marginLeft="18dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
+                android:layout_marginLeft="18dp"
                 android:gravity="center"
                 android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/title"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="25dp"
-                    android:textColor="#FFFFFFFF"
-                    android:textSize="18sp" />
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/title"
+                        android:layout_width="wrap_content"
+                        android:layout_height="25dp"
+                        android:maxWidth="130dp"
+                        android:singleLine="true"
+                        android:textColor="#FFFFFFFF"
+                        android:textSize="18sp" />
+
+                    <ImageView
+                        android:layout_gravity="center"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:src="@mipmap/zx_777" />
+
+                    <View
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1" />
+                </LinearLayout>
+
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -86,37 +106,38 @@
                         android:layout_height="wrap_content"
                         android:textColor="#FFFFFFFF"
                         android:textSize="14sp" />
-                    <ImageView
-                        android:id="@+id/ivLevel"
-                        android:layout_marginLeft="8dp"
-                        android:src="@mipmap/zx_65"
-                        android:layout_width="12dp"
-                        android:layout_height="20dp" />
 
                     <ImageView
-                        android:visibility="gone"
+                        android:id="@+id/ivLevel"
+                        android:layout_width="12dp"
+                        android:layout_height="20dp"
+                        android:layout_marginLeft="8dp"
+                        android:src="@mipmap/zx_65" />
+
+                    <ImageView
                         android:id="@+id/ivLeve2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="18dp"
                         android:layout_marginLeft="8dp"
                         android:src="@mipmap/zx_63"
-                        android:layout_width="wrap_content"
-                        android:layout_height="18dp" />
+                        android:visibility="gone" />
 
                     <TextView
                         android:id="@+id/tvhycz"
-                        android:layout_marginLeft="7.3dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginLeft="7.3dp"
                         android:text="会员充值"
                         android:textColor="#FFF5A623"
                         android:textSize="11sp" />
-                    
+
                     <ImageView
-                        android:layout_marginLeft="6dp"
-                        android:layout_gravity="center"
-                        android:src="@mipmap/zx_111"
                         android:layout_width="6dp"
-                        android:layout_height="11dp" />
-                    
+                        android:layout_height="11dp"
+                        android:layout_gravity="center"
+                        android:layout_marginLeft="6dp"
+                        android:src="@mipmap/zx_111" />
+
                 </LinearLayout>
 
                 <TextView
@@ -390,7 +411,33 @@
                 android:textSize="14sp" />
 
         </LinearLayout>
+        <LinearLayout
+            android:id="@+id/menu_7"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:layout_marginRight="1dp"
+            android:layout_weight="1"
+            android:background="@drawable/bg_white"
+            android:gravity="center"
+            android:orientation="vertical">
 
+            <ImageView
+                android:layout_width="46dp"
+                android:layout_height="46dp"
+                android:layout_marginBottom="20dp"
+                android:layout_marginTop="29dp"
+                android:src="@mipmap/zx2_2" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="13dp"
+                android:text="一键刷新"
+                android:textColor="#FF333333"
+                android:textSize="14sp" />
+
+        </LinearLayout>
         <LinearLayout
             android:id="@+id/menu_2"
             android:layout_width="0dp"
@@ -420,7 +467,21 @@
 
         </LinearLayout>
 
+
+    </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#FAE5E8" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#FAE5E8"
+        android:orientation="horizontal">
         <LinearLayout
+            android:layout_marginRight="1dp"
             android:id="@+id/menu_3"
             android:layout_width="0dp"
             android:layout_height="match_parent"
@@ -446,20 +507,8 @@
                 android:textSize="14sp" />
 
         </LinearLayout>
-    </LinearLayout>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#FAE5E8" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#FAE5E8"
-        android:orientation="horizontal">
-
         <LinearLayout
+            android:visibility="gone"
             android:id="@+id/menu_4"
             android:layout_width="0dp"
             android:layout_height="match_parent"
@@ -518,6 +567,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:visibility="invisible"
             android:id="@+id/menu_6"
             android:layout_width="0dp"
             android:layout_height="match_parent"
@@ -528,6 +578,7 @@
             android:orientation="vertical">
 
             <ImageView
+                android:visibility="invisible"
                 android:layout_width="42.2dp"
                 android:layout_height="38dp"
                 android:layout_marginBottom="24dp"
@@ -535,6 +586,7 @@
                 android:src="@mipmap/zx_59" />
 
             <TextView
+                android:visibility="invisible"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="13dp"
